--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-firebase/app": "~15.4.0",
+    "@react-native-firebase/auth": "17.4.3",
+    "@react-native-firebase/database": "17.4.3",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
@@ -17,8 +20,11 @@
     "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-dev-client": "~1.3.1",
+    "expo-modules-autolinking": "1.2.0",
     "expo-notifications": "~0.16.1",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.7",
+    "firebase": "^9.20.0",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.9",
